# no-os-sample-project

./: CMakeLists.txt  CMakePresets.json  README.md  project.conf
